libceph: Add support for 'sloppy' mount option

When the user space mount helper mount.ceph passes the 'sloppy' option,
don't fail on unrecognized mount options. This is similar to NFS sloppy
mount support.

This resolves:
    http://tracker.ceph.com/issues/19388